syntax = "proto3";
package main;

message NEvalInfo {
	int32 hops = 1;		// number of hops to reach self
	int64 time = 2;		// time when it reached self
	string hostname = 3;
}

message NFwdPacket {
	string SrcHostname = 1;		// source
	repeated NEvalInfo evalList = 2;	// append self info before forwarding
	bytes  payload = 3;		// payload e.g. video/audio frames
	int32 SeqNum = 4;
}

message NEmpty {
}

service naradamcast {
	rpc NaradaFwd(NFwdPacket) returns (NEmpty) {}
}
